--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,7 @@ scikit-learn
 matplotlib
 seaborn
 scipy
+catboost
+xgboost
+dill # it is used to save the pickle model it help in serialization 
 # -e . 
